# unilink

./: .clang-format  .cmake-format.py  .cppcheck  .dockerignore  .gitignore  01__getting__started_8md.html  02__tcp__server_8md.html  03__uds__communication_8md.html  04__serial__communication_8md.html  05__udp__communication_8md.html  06__asynchronous__patterns_8md.html  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  NOTICE  PR_DESCRIPTION.md  README.md  README_8md.html  annotated.html  annotated_dup.js  api__guide_8md.html  api__stability_8md.html  auto__initializer_8cc.html  auto__initializer_8cc__incl.map  auto__initializer_8cc__incl.md5  auto__initializer_8cc_source.html  auto__initializer_8hpp.html  auto__initializer_8hpp.js  auto__initializer_8hpp__dep__incl.map  auto__initializer_8hpp__dep__incl.md5  auto__initializer_8hpp__incl.map  auto__initializer_8hpp__incl.md5  auto__initializer_8hpp_source.html  base_2reconnect__decider_8hpp.html  base_2reconnect__decider_8hpp.js  base_2reconnect__decider_8hpp__dep__incl.map  base_2reconnect__decider_8hpp__dep__incl.md5  base_2reconnect__decider_8hpp__incl.map  (+4117 more)
bindings/python/: CMakeLists.txt  diagnose_windows_import.py  module.cpp  module.cpp.in  test_import.py
conan_test_consumer/: .gitignore  CMakeLists.txt  CMakePresets.json  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conandeps_legacy.cmake  conanfile.txt  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  main.cpp  unilink-Target-release.cmake  unilink-config.cmake  unilink-release-x86_64-data.cmake  unilinkTargets.cmake
examples/: CMakeLists.txt  README.md  chat_tcp_client.cc  config_manager_example.cc  echo_client.cc  echo_serial.cc  echo_server.cc  echo_tcp_client.cc  error_handling_example.cc  serial.cc
examples/advanced/: multi_client_chat_client.cc  multi_client_chat_server.cc
examples/chat/: chat_serial.cc  chat_tcp_client.cc  chat_tcp_server.cc
examples/common/: CMakeLists.txt  README.md  error_handling_example.cc  error_handling_example.md  logging_example.cc  logging_example.md
examples/echo/: echo_serial.cc  echo_tcp_client.cc  echo_tcp_server.cc
examples/gateway/: tcp_uds_gateway.cc
examples/serial/: CMakeLists.txt  README.md  echo.cc
examples/tcp/: CMakeLists.txt  README.md  broadcast_server.cc
examples/tutorials/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md
examples/udp/: CMakeLists.txt  README.md  udp_receiver.cpp  udp_sender.cpp
examples/uds/: CMakeLists.txt  README.md  echo_uds_client.cc  echo_uds_server.cc
interface_socket/: CMakeLists.txt
interface_socket/module/: tcp_server_session.hpp
test/: CMakeLists.txt  README.md  test_advanced_optimizations.cc  test_api_safety.cc  test_architecture.cc  test_benchmark.cc  test_boundary.cc  test_builder.cc  test_builder_coverage.cc  test_builder_integration.cc  test_client_limit_integration.cc  test_common.cc  test_communication.cc  test_concurrency_safety.cc  test_config.cc  test_config_manager.cc  test_config_validation.cc  test_core.cc  test_core_integrated.cc  test_debug_communication.cc  test_detailed_debug.cc  test_error_handler_coverage_fixed.cc  test_error_recovery.cc  test_final_architecture.cc  test_fixed_communication.cc  test_improved_architecture.cc  test_integration.cc  test_iocontext_fix.cc  test_memory.cc  test_memory_pool.cc  test_memory_pool_performance.cc  test_memory_safety.cc  test_mock_integrated.cc  test_mock_integration.cc  test_optimized_memory_pool.cc  test_performance.cc  test_platform.cc  test_real_communication.cc  test_safe_architecture.cc  test_safe_data_buffer.cc  (+10 more)
test/e2e/: CMakeLists.txt
test/integration/: CMakeLists.txt  test_builder_integration.cc  test_core_integrated.cc  test_safety_integrated.cc  test_stable_integration.cc
test/mocks/: dependency_injection.hpp  mock_tcp_socket.hpp  mock_test_helpers.hpp  mock_uds_acceptor.hpp  mock_uds_socket.hpp  testable_tcp_client.hpp
test/performance/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/util/: pty_helper.hpp
test/utils/: CMakeLists.txt  channel_contract_test_utils.hpp  contract_utils.hpp  test_constants.hpp  test_utils.hpp  wrapper_contract_test_utils.hpp
unilink/: CMakeLists.txt  export.hpp  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html  unilink.cc  unilink.hpp  unilink.hpp.func-sort-c.html  unilink.hpp.func.html  unilink.hpp.gcov.html
unilink/base/: common.hpp  constants.hpp  deprecated.hpp  error_codes.hpp  platform.hpp  visibility.hpp
unilink/builder/: auto_initializer.cc  auto_initializer.cc.func-sort-c.html  auto_initializer.cc.func.html  auto_initializer.cc.gcov.html  auto_initializer.hpp  auto_initializer.hpp.func-sort-c.html  auto_initializer.hpp.func.html  auto_initializer.hpp.gcov.html  ibuilder.hpp  ibuilder.hpp.func-sort-c.html  ibuilder.hpp.func.html  ibuilder.hpp.gcov.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html  resource_manager.cc  resource_manager.hpp  serial_builder.cc  serial_builder.cc.func-sort-c.html  serial_builder.cc.func.html  serial_builder.cc.gcov.html  serial_builder.hpp  tcp_client_builder.cc  tcp_client_builder.cc.func-sort-c.html  tcp_client_builder.cc.func.html  tcp_client_builder.cc.gcov.html  tcp_client_builder.hpp  tcp_server_builder.cc  tcp_server_builder.cc.func-sort-c.html  tcp_server_builder.cc.func.html  tcp_server_builder.cc.gcov.html  tcp_server_builder.hpp  udp_builder.cc  udp_builder.cc.func-sort-c.html  udp_builder.cc.func.html  udp_builder.cc.gcov.html  udp_builder.hpp  (+7 more)
unilink/common/: .cppcheck  common.hpp  common.hpp.func-sort-c.html  common.hpp.func.html  common.hpp.gcov.html  constants.hpp  error_handler.cc  error_handler.cc.func-sort-c.html  error_handler.cc.func.html  error_handler.cc.gcov.html  error_handler.hpp  error_handler.hpp.func-sort-c.html  error_handler.hpp.func.html  error_handler.hpp.gcov.html  error_types.hpp  error_types.hpp.func-sort-c.html  error_types.hpp.func.html  (+81 more)
(+1662 files in other folders)
